# gpatches

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-tests.yml
gpatches/: __init__.py
graph_diff/: __init__.py
graph_patch/: __init__.py
graphpatch/: __init__.py
tests/: helpers.py  test___init__.py
