[project]
name = "graph_diff"
version = "0.1.0"
description = "A tiny tool to diff two graphs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.5",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]